--- a/Maischer/MaischerClient.html
+++ b/Maischer/MaischerClient.html
@@ -5,6 +5,73 @@
       <meta charset="utf-8"/>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.js"></script>
       <script type = "text/javascript">
+        window.chartColors = {
+          red: 'rgb(255, 99, 132)',
+          orange: 'rgb(255, 159, 64)',
+          yellow: 'rgb(255, 205, 86)',
+          green: 'rgb(75, 192, 192)',
+          blue: 'rgb(54, 162, 235)',
+          purple: 'rgb(153, 102, 255)',
+          grey: 'rgb(201, 203, 207)'
+        };         
+        var ChartConfig = {
+                        // The type of chart we want to create
+                        type: 'line',
+
+                        // The data for our dataset
+                        data: { datasets: [
+                        {
+                          label: 'Temperatuur',
+                          backgroundColor: window.chartColors['red'],
+                          borderColor: window.chartColors['red'],
+                          data: [],
+                          fill: false
+                        }] },
+
+                       // Configuration options go here
+                       options: {
+                         maintainAspectRatio: false,
+                         responsive: true,
+                         title: {
+                            display: true,
+                            text: 'Chart.js Line Chart'
+                         },
+                         tooltips: {
+                            enabled: false,
+                            mode: 'index',
+                            intersect: false,
+                         },    
+                         elements: {
+                                    point:{
+                                        radius: 0
+                                    }
+                                },                       
+                         scales: {
+                               xAxes: [{
+                                              type: 'time',
+                                              time: {
+                                                   unit: 'minute',
+                                                    displayFormats: {
+                                                       minute: 'HH:mm:ss'
+                                                   }                                          
+                                              },
+                                              ticks: {
+                                                      autoSkip: true,
+                                                      maxTicksLimit: 20
+                                                  }                                                 
+                                           }],                                
+                               yAxes: [{
+                                        display: true,
+                                        scaleLabel: {
+                                           display: true,
+                                           labelString: 'Temperatuur'
+                                        },                                
+                                     }],
+                                
+                          },
+                       }
+                   };
+        var colorNames = Object.keys(window.chartColors);        
         function WebSocket_GetSetPoint(){
           var handleGetSetPointAnswer = function (jsonobj) {
             document.getElementById("TemperatuurPV").value = jsonobj.SetPoint
@@ -25,6 +92,11 @@
         function WebSocket_GetTemperatuur(){
           var handleGetTemperatuurAnswer = function (jsonobj) {
             document.getElementById("TemperatuurPV").value = jsonobj.ProcessValue
+
+            ChartConfig.data.datasets[0].data.push({
+                                              x: new Date(Date.now()),
+                                              y: jsonobj.ProcessValue })
+            window.myLine.update();
           }
           WebSocketClient("GetTemperatuur",handleGetTemperatuurAnswer)
         }
@@ -100,12 +172,16 @@
         window.onload = function() {
             alert("Reload")
 
+            var ctx = document.getElementById("myChart").getContext('2d');
+            ctx.height = 500;
+            window.myLine = new Chart(ctx, ChartConfig);   
+
             WebSocket_GetSetPoint()
             WebSocket_GetTemperatuur()
             WebSocket_GetServoAngle()
 
             var intervalID = setInterval(WebSocket_GetSetPoint, 5000);
-            var intervalID = setInterval(WebSocket_GetTemperatuur, 5000);
+            var intervalID = setInterval(WebSocket_GetTemperatuur, 1000);
             var intervalID = setInterval(WebSocket_GetServoAngle, 5000);
         };
       </script>
