--- a/Maischer/MaischerClient.html
+++ b/Maischer/MaischerClient.html
@@ -137,6 +137,14 @@
         } 
 
         function WebSocket_SetOutput(){
+          var setPoint = document.getElementById("OutputSP").value;          
+          var handleSetOutputAnswer = function (jsonobj) {
+            document.getElementById("OutputSP").value = jsonobj.Output
+          }
+          WebSocketClient("SetOutput " + setPoint,handleSetOutputAnswer)
+        }
+
+        function WebSocket_SetPID(){
           var P = document.getElementById("PID_P_SP").value;
           var I = document.getElementById("PID_I_SP").value;
           var D = document.getElementById("PID_D_SP").value;
@@ -146,16 +154,8 @@
             document.getElementById("PID_I_PV").value = jsonobj.I
             document.getElementById("PID_D_PV").value = jsonobj.D
           }
-          var command = "SetPID " + P + " " + I " " + D 
+          var command = "SetPID " + str(P) + " " + str(I) " " + str(D) 
           WebSocketClient(command, handleSetOutputAnswer)
-        }
-        
-        function WebSocket_SetPID(){
-          var setPoint = document.getElementById("SetPID").value;          
-          var handleSetOutputAnswer = function (jsonobj) {
-            document.getElementById("OutputSP").value = jsonobj.Output
-          }
-          WebSocketClient("SetOutput " + setPoint,handleSetOutputAnswer)
         }
 
         function WebSocketClient(commandToSend,messageHandler) {
