--- a/Maischer/MaischerClient.html
+++ b/Maischer/MaischerClient.html
@@ -139,7 +139,7 @@
         function WebSocket_SetOutput(){
           var setPoint = document.getElementById("OutputSP").value;          
           var handleSetOutputAnswer = function (jsonobj) {
-            document.getElementById("OutputSP").value = jsonobj.Output
+            document.getElementById("OutputSP").value = jsonobj.Output;
           }
           WebSocketClient("SetOutput " + setPoint,handleSetOutputAnswer)
         }
@@ -150,11 +150,11 @@
           var D = document.getElementById("PID_D_SP").value;
 
           var handleSetOutputAnswer = function (jsonobj) {
-            document.getElementById("PID_P_PV").value = jsonobj.P
-            document.getElementById("PID_I_PV").value = jsonobj.I
-            document.getElementById("PID_D_PV").value = jsonobj.D
+            document.getElementById("PID_P_PV").value = jsonobj.P;
+            document.getElementById("PID_I_PV").value = jsonobj.I;
+            document.getElementById("PID_D_PV").value = jsonobj.D;
           }
-          var command = "SetPID " + str(P) + " " + str(I) " " + str(D) 
+          var command = "SetPID " + str(P) + " " + str(I) " " + str(D);
           WebSocketClient(command, handleSetOutputAnswer)
         }
 
