--- a/Maischer/MaischerClient.html
+++ b/Maischer/MaischerClient.html
@@ -218,7 +218,7 @@
           }                       
         }
         window.onload = function() {
-            alert("Reload")
+            //alert("Reload")
 
             var ctx = document.getElementById("myChart").getContext('2d');
             ctx.height = 500;
